Fix form not centered

--- a/styles/wallet.module.css
+++ b/styles/wallet.module.css
@@ -106,6 +106,8 @@
   padding-right: 15px;
   padding-left: 15px;
   margin-top: 5rem;
+  margin-left: auto;
+  margin-right: auto;
   flex-direction: column;
 }
 
